# GOL

./: .gitignore  CMakeLists.txt  README.md  cells.c  cells.h  main.c  main.h  run.sh
.github/workflows/: cmake-multi-platform.yml
cmake/: TC-mingw.cmake
patterns/: 52514m.rle  block_laying_switch_engine.rle  breeder1.rle  diamond_side_256.rle  diehard518476.rle.txt  filled_square_256.rle  glider.rle  gosper_glider_gun.rle  line.rle  square.rle
